--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Guess A Number!</title>
 </head>
 
 <body>
+    <h2>Time to play - GUESS A NUMBER!!!</h2>
+
+    <p>The game is easy. All you have to do is guess a number between 1 and 20. We will let you know if your guess is too high or too low and then you get to guess again. You have four tries to get the correct number. </p>
+
+    <label><h3>Guess a number:</h3></label>
+    <input id="number-guess">
+    <button class="number-button">Click me!</button>
+
 
     <script src="app.js"></script>
 </body>
