--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 
     <label><h3>Guess a number:</h3></label>
     <input id="number-guess">
-    <button class="number-button">Click me!</button>
-
-
-    <script src="app.js"></script>
+    <button id="number-button">Click me!</button>
+    <span id="your-guess" class="hidden"></span>
+    <script type="module" src="app.js"></script>
 </body>
 
 </html>
