--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <main>
         <h2 class="title">Time to play - GUESS A NUMBER!!!</h2>
 
-        <p class="title">The game is super easy! All you have to do is guess a number between 1 and 20. We will let you know if your guess is too high or too low and then you get to guess again. You have four tries to get the correct number. </p>
+        <p class="title">The game is super easy! All you have to do is guess a number between 0 and 20. We will let you know if your guess is too high or too low and then you get to guess again. You have four tries to get the correct number. </p>
 
         <label><h3>Go ahead, guess a number!</h3></label>
         <label><h4>Tries Remaining: <span id="tries-remaining"></span></h4></label>
         <br>
-        <input id="number-guess">
+        <input id="number-guess" type="number">
         <button id="number-button">Click me</button>
         <br><br>
         <span id="your-guess" class="hidden"></span>
         <br><br>
-        <span id="game-over" class="hidden"><span id="correct-number"></span>.</span>
+        <span id="game-over" class="hidden"><span id="correct-number"></span></span>
         <section class="hidden">
         <h4>Computer: <span id="computer-number"></span></h4>
         </section>
